Update nvim clipboard configurations

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,50 +1,68 @@
+# Terminal settings
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
+# Prefix key
 set -g prefix C-t
 unbind C-b
 bind-key C-t send-prefix
 
+# Window pane management
 unbind %
 bind | split-window -h 
-
 unbind '"'
 bind - split-window -v
 
+# Reload Configuration
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
+# Pane Resizing
 bind j resize-pane -D 5
 bind k resize-pane -U 5
 bind l resize-pane -R 5
 bind h resize-pane -L 5
 
+# Toggle pane zoom
 bind -r m resize-pane -Z
 
+# Enable mouse support
 set -g mouse on
 
+# Set mode keys to vi
 set-window-option -g mode-keys vi
 
+# Copy mode key bindings
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+# Prevent exiting copy mode when dragging with mouse
+unbind -T copy-mode-vi MouseDragEnd1Pane 
 
-# remove delay for exiting insert mode with ESC in Neovim
+# Clipboard integration
+# Use `xclip` for copy-paste on X11 systems
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+
+# Bind y to also copy to system clipboard
+bind-key y run "tmux save-buffer - | xclip -selection clipboard"
+bind-key Y run "tmux save-buffer - | xclip -selection clipboard"
+
+
+# Remove delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 10
 
-# tpm plugin
+# Plugin manager and plugins
 set -g @plugin 'tmux-plugins/tpm'
-
-# list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @plugin 'tmux-plugins/tmux-resurrect' # Preserve TMUX sessions across reboots
+set -g @plugin 'tmux-plugins/tmux-continuum' # Automatically saves sessions every 15 mins
+set -g @plugin 'Nybkox/tmux-kanagawa' # Kanagawa colorscheme
 
-
+# Plugin settings
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize TMUX plugin manager 
+# (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
