--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -15,10 +15,7 @@ unbind %
 bind | split-window -h 
 unbind '"'
 bind - split-window -v
-
-# Reload Configuration
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf
+bind x kill-pane
 
 # Pane Resizing
 bind j resize-pane -D 5
@@ -26,8 +23,15 @@ bind k resize-pane -U 5
 bind l resize-pane -R 5
 bind h resize-pane -L 5
 
+# Reload Configuration
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf
+
 # Toggle pane zoom
 bind -r m resize-pane -Z
+
+# Clear tmux-resurrect and tmux-continuum cache and reload configuration
+bind C-x run-shell 'rm -rf ~/.tmux/resurrect/ && tmux source-file ~/.config/tmux/tmux.conf'
 
 # Enable mouse support
 set -g mouse on
@@ -49,7 +53,6 @@ bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -selection
 # Bind y to also copy to system clipboard
 bind-key y run "tmux save-buffer - | xclip -selection clipboard"
 bind-key Y run "tmux save-buffer - | xclip -selection clipboard"
-
 
 # Remove delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 10
