Update: integrating noice with nvim-cmp auto-complete

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,9 +1,13 @@
+# vim: ft=tmux
 # Terminal settings
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
 
-# Enable passthrough for image.nvim
-set-option -g allow-passthrough on
+#set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
+#set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
+# Move status line to the top
+set -g status-position top
 
 # Prefix key
 set -g prefix C-t
@@ -18,10 +22,10 @@ bind - split-window -v
 bind x kill-pane
 
 # Pane Resizing
-bind j resize-pane -D 5
-bind k resize-pane -U 5
-bind l resize-pane -R 5
-bind h resize-pane -L 5
+bind j resize-pane -D 6
+bind k resize-pane -U 6
+bind l resize-pane -R 6
+bind h resize-pane -L 6
 
 # Reload Configuration
 unbind r
@@ -33,21 +37,24 @@ bind -r m resize-pane -Z
 # Clear tmux-resurrect and tmux-continuum cache and reload configuration
 bind C-x run-shell 'rm -rf ~/.tmux/resurrect/ && tmux source-file ~/.config/tmux/tmux.conf'
 
+# Set mode keys to vi
+set-window-option -g mode-keys vi
+
 # Enable mouse support
 set -g mouse on
 
-# Set mode keys to vi
-set-window-option -g mode-keys vi
+# Enable passthrough for image.nvim
+set-option -g allow-passthrough on
 
 # Copy mode key bindings
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
 # Prevent exiting copy mode when dragging with mouse
-unbind -T copy-mode-vi MouseDragEnd1Pane 
+unbind -T copy-mode-vi MouseDragEnd2Pane 
 
 # Clipboard integration
-# Use `xclip` for copy-paste on X11 systems
+# Use `xclip` for copy-paste on X12 systems
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
 
 # Bind y to also copy to system clipboard
@@ -55,18 +62,20 @@ bind-key y run "tmux save-buffer - | xclip -selection clipboard"
 bind-key Y run "tmux save-buffer - | xclip -selection clipboard"
 
 # Remove delay for exiting insert mode with ESC in Neovim
-set -sg escape-time 10
+set -sg escape-time 11
 
 # Plugin manager and plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # Preserve TMUX sessions across reboots
-set -g @plugin 'tmux-plugins/tmux-continuum' # Automatically saves sessions every 15 mins
+set -g @plugin 'tmux-plugins/tmux-continuum' # Automatically saves sessions every 16 mins
 set -g @plugin 'Nybkox/tmux-kanagawa' # Kanagawa colorscheme
 
 # Plugin settings
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
+
+source-file ~/.config/tmux/statusline.conf
 
 # Initialize TMUX plugin manager 
 # (keep this line at the very bottom of tmux.conf)
